--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -14,3 +14,43 @@
 		display: block;
 	}
 }
+
+._icon-house-plan:before {
+	content: "\e900";
+}
+._icon-joist:before {
+	content: "\e901";
+}
+._icon-like:before {
+	content: "\e902";
+}
+._icon-location:before {
+	content: "\e903";
+}
+._icon-phone:before {
+	content: "\e904";
+}
+._icon-window:before {
+	content: "\e905";
+}
+._icon-windows-2:before {
+	content: "\e906";
+}
+._icon-windows-3:before {
+	content: "\e907";
+}
+._icon-arrow-down:before {
+	content: "\e908";
+}
+._icon-arrow-slider:before {
+	content: "\e909";
+}
+._icon-brick:before {
+	content: "\e90a";
+}
+._icon-clock:before {
+	content: "\e90b";
+}
+._icon-grid:before {
+	content: "\e90c";
+}
