--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,19 +13,26 @@
 @import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "OpenSans";
+$fontFamily: "Open Sans";
 $fontSize: rem(13); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
+$mainColor: #44424b; // Цвет шрифта по умолчанию
+$grey: #9a99a3;
+$greyDark: #63685f;
+$blueDark: #35414c;
+$red: #f75445;
+$green: #6ab942;
+$lightBlue: #8997a2;
+$footerLogo: #8e8c9c;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
-$minWidth: 320;
+$minWidth: 1110;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1140;
+$maxWidthContainer: 1110;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
